--- a/Docker_conf.yml
+++ b/Docker_conf.yml
@@ -10,14 +10,14 @@
       ignore_errors: yes
     
     - name: Remove existing image if present using docker command
-      command: docker rmi manisha418/dockerimg
+      command: docker rmi manisha418/whatsapp:v1
       ignore_errors: yes
 
     - name: Pull Docker image using docker command
-      command: docker pull manisha418/dockerimg
+      command: docker pull manisha418/whatsapp:v1
 
     - name: Run Docker container using docker command
-      command: docker run -d -p 8080:8080 --name webapp manisha418/dockerimg
+      command: docker run -d -p 8080:8080 --name webapp manisha418/whatsapp:v1
 
     - name: Check Docker container status using docker command
       command: docker ps -a
